# stratego

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TP_CPP_PROJECT.tar.xz  cmake_install.cmake  testing_mine.tar.xz
.circleci/: config.yml
Net/: CMakeLists.txt
Net/include/: AbstractClientNetObject.h  AbstractNetObject.h  AbstractServerNetObject.h  ClientNetObject.h  DefaultAbstractFactory.h  Serializable.h  ServerNetObject.h  noncopyable.h
Net/non_public_include/: SerializationOperation.h
Net/src/: ClientNetObject.cpp  ClientNetObjectImpl.cpp  SerializationOperation.cpp  ServerNetObject.cpp  ServerNetObjectImpl.cpp  SubSock.cpp
Net/test/: gtest.cpp  serialization_operation_test.cpp  serialized_stub.h
server_side/: CMakeLists.txt
server_side/server/: CMakeLists.txt  TODO.txt  main.cpp
server_side/server/Net/: Makefile  Net.cbp  cmake_install.cmake
server_side/server/game/: CMakeLists.txt
server_side/server/game/include/: abstract_base.hpp  abstract_handler.hpp  abstract_unit.hpp  adapter.hpp  base.hpp  game.hpp  handler.hpp  input.hpp  manager.hpp  manager_impl.hpp  map.hpp  mediator.hpp  news_maker.hpp  news_taker.hpp  player.hpp  real_unit.hpp  server.hpp  state.hpp  unit.hpp  update_maker.hpp
server_side/server/game/src/: adapter.cpp  base.cpp  game.cpp  manager.cpp  manager_impl.cpp  map.cpp  player.cpp  real_unit.cpp  unit.cpp  update_maker.cpp
server_side/server/gmock/: Makefile  cmake_install.cmake  gmock.cbp
server_side/server/gmock/gtest/: Makefile  cmake_install.cmake  gtest.cbp
server_side/server/maps/2/: 0.xml
server_side/server/maps/3/: 0.xml
server_side/server/xml_make/: CMakeLists.txt  xml.cpp
server_side/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  server_tests.cbp
server_side/test/include/: map_tests.hpp  mock_base.hpp  mock_colleague.hpp  mock_mediator.hpp  mock_news_taker.hpp  mock_unit.hpp
server_side/test/src/: base_tests.cpp  gtest.cpp  map_tests.cpp  player_tests.cpp  unit_tests.cpp
tmp/: config.yml
